Fixed darklight toggle slow-load issue

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -11,6 +11,8 @@
 		Infinite scroll by Paul Irish and Luke Shumard: https://infinite-scroll.com/
 		NPF photosets fix by glenthemes: https://glenthemes.tumblr.com/post/659034084446748672/npf-images-v3
 		Dark/light mode toggle by eggdesign: https://eggdesign.tumblr.com/post/186889223257/day-night-mode-tutorial-after-featuring-a
+
+	Last updated 28 Sep 2021.
 -->
 
 <!DOCTYPE html>
@@ -315,7 +317,10 @@ body.light em, body.light i { color: {color:Light mode italics} }
 		</form>
 		{/block:IfShowSearchBar}
 		{block:IfShowColorModeToggle}
-		<a id="darklight" data-tippy-content="Toggle dark/light mode"><svg width="1.25em" height="1.25em" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use href="#img-dark"></use></svg></a>
+		<a id="darklight" data-tippy-content="Toggle dark/light mode" onclick='$("body").toggleClass("dark light")'>
+			<svg id="dark" width="1.25em" height="1.25em" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use href="#img-dark"></use></svg>
+			<svg id="light" width="1.25em" height="1.25em" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use href="#img-light"></use></svg>
+		</a>
 		{/block:IfShowColorModeToggle}
 		<!-- DO NOT REMOVE CREDIT. LEAVE THIS INTACT. -->
 		<a href="https://wovenstarlight.tumblr.com" data-tippy-content="Theme made by wovenstarlight"><svg width="1.25em" height="1.25em" viewBox="1 1 10 10" xmlns="http://www.w3.org/2000/svg" version="1.1" preserveAspectRatio="xMinYMin"><use href="#img-credit"></use></svg></a>
