Added placeholder text for FAQ/submit guidelines

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -50,8 +50,8 @@
 	<meta name="if:Use Discord font if available" content="1">
 	<meta name="text:Font size" content="16px">
 	
-	<meta name="text:FAQ" content="">
-	<meta name="text:Submission guidelines" content="">
+	<meta name="text:FAQ" content="This will go on your ask page, above your ask box.&NewLine;Add whatever code or plain text you want. If you don't want an FAQ, leave this field blank!">
+	<meta name="text:Submission guidelines" content="This will go on your submission page, above your submission box.&NewLine;Add whatever code or plain text you want. If you don't want submission guidelines, leave this field blank!">
 	
 	<meta name="image:Header" content="{HeaderImage}">
 	<meta name="color:Title if header image is showing" content="#fff">
