Added updated link to theme code

--- a/discord-theme.html
+++ b/discord-theme.html
@@ -1,7 +1,21 @@
 <!-- 
 	THEME 1: DISCORD
+	VERSION 1
 
 	Theme created by wovenstarlight. Original interface design belongs to discordapp.com; I do not claim any rights to the design.
+
+
+
+	******************************************
+	*!!!!!!!!!!! IMPORTANT NOTICE !!!!!!!!!!!*
+	*!!!!!!!!!!!! VERSION UPDATE !!!!!!!!!!!!*
+	******************************************
+	This is an outdated version of the Discord theme. It is no longer being maintained or updated.
+	For Discord theme version 2, follow this link: https://raw.githubusercontent.com/wovenstarlight/tumblr-themes/main/theme1/theme1.html
+	Version 2 offers a better dark/light mode switching experience and is being updated to fix bugs.
+	I will no longer be taking questions or bug fix requests for version 1 of the theme.
+
+
 
 	Credits:
 		Tippy.js tooltips by atomiks: https://atomiks.github.io/tippyjs
@@ -12,7 +26,7 @@
 		NPF photosets fix by glenthemes: https://glenthemes.tumblr.com/post/659034084446748672/npf-images-v3
 		Dark/light mode toggle by eggdesign: https://eggdesign.tumblr.com/post/186889223257/day-night-mode-tutorial-after-featuring-a
 
-	Last updated 28 Sep 2021.
+	Last updated 28 Sep 2021. (NO LONGER BEING UPDATED)
 -->
 
 <!DOCTYPE html>
